website/static/css/base.css
:root {
  --bar: #2C2F33;
  --root: #23272A;
  --login: #7289DA;
  --text: #99AAB5
}

body {
  margin: 0;
  color: var(--text);
  font-family: 'Noto Sans', sans-serif;
  background-color: var(--root)
}

.notice {
  color: white;
}

#box {
  display: grid;
  position: fixed;
  grid-template-columns: repeat(1, 1fr);
  grid-template-rows: repeat(10, 1fr);
  grid-template-areas:
    "bar"
    "root"
    "root"
    "root"
    "root"
    "root"
    "root"
    "root"
    "root"
    "root";

  height: 100%;
  width: 100%;
}

img {
  width: 7rem;
}

#bar {
  grid-area: bar;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(1, 1fr);
  grid-template-areas:
    "logo title user";

  background-color: var(--bar);
  z-index: 10;
  width: 100%;
  height: fit-content;
}

#logo {
  grid-area: logo;
  float: right;
  transition: 0.5s;
  border-radius: 50%;
}

#title {
  grid-area: title;
  text-align: center;
  font-size: 3rem;
}

#logo, #user {
  padding: 20px;
}

#user {
  grid-area: user;
  transition: 0.5s;
}

#user > * {
  float: right;
}

#avatar {
  border-radius: 50%;
  cursor: pointer;
}

#avatar, #logo > a > img {
  width: 5vw
}

#login {
  background-color: var(--login);
}

button:not(#save) {
  font-size: 2rem;
  padding: 1rem;
  border: 1px none;
  border-radius: 20px;
  outline: none;
  cursor: pointer;
  transition: 0.5s;
}

button:not(#save):hover {
  transition: 0.5s;
  opacity: 0.5;
}

button:not(#save):active {
  transition: 0s;
  opacity: 0.2
}

#root {
  grid-area: root;
  background-color: var(--root);
  overflow-y: auto;
  text-align: center;
}


#userMenu {
  display: block;
  position: absolute;
  background-color: var(--bar);
  min-width: 160px;
  overflow: auto;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
  right: 2vw;
  top: 13.5vh;
  transition: 0.5s;
}

#userMenu > a {
  color: var(--text);
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  transition: 0.02s;
  text-align: center;
}

#userMenu > a:hover {
  background-color: var(--root)
}

#userMenu.hide {display: none;}

a {
  color: var(--text);
}

a:hover {
  opacity: 0.5
}

@media (max-width: 1000px) {
  #title {
    font-size: 5vw;
  }
  #avatar, #logo > a > img {
    width: 10vw
  }
  #userMenu > a {
    top: 10vh;
    font-size: 3rem !important
  }
}


@media (max-width: 600px) {
  #box {
    position: unset;
  }
}

.hidden {
  display: none !important;
}

